fin correction contraste

--- a/style.css
+++ b/style.css
@@ -775,7 +775,7 @@ h4 {
 }
 
 .tc-white {
-    color: #FCD0B8!important;
+    color: #F3976C!important;
 }
 
 .btn-atomic-tangerine {
